<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/const_layout"
    android:background="@color/mainColor4"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintVertical_bias="1"
        >

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="303dp"
            android:background="@drawable/shape"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:layout_height="43dp"
            android:layout_marginTop="24dp"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passSignUp"
            android:layout_width="303dp"
            android:layout_height="43dp"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_marginTop="88dp"

            android:background="@drawable/shape"
            android:drawableEnd="@drawable/ic_lock"
            android:elevation="5dp"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/phoneSignUp"
            android:layout_width="303dp"
            android:layout_height="43dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/shape"
            android:drawableEnd="@drawable/ic_call"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:elevation="5dp"
            android:hint="@string/phone"
            android:inputType="phone"

            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameSignUp"
            android:layout_width="303dp"
            android:layout_height="43dp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:layout_marginTop="216dp"
            android:background="@drawable/shape"
            android:drawableEnd="@drawable/ic_name"
            android:elevation="5dp"
            android:hint="@string/name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textPersonName" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg"
            android:layout_width="303dp"
            android:layout_height="45dp"
            android:background="@drawable/shape3"
            android:elevation="20dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:text="@string/Register"
            android:textColor="@color/mainColor4"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.671" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="124dp"
            android:text="@string/signIn"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/info"
            android:layout_width="300dp"
            android:layout_height="67dp"
            android:layout_marginBottom="44dp"
            android:text="@string/info4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:text="@string/register2"
        android:textColor="@color/main"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reg_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:text="@string/RegisterAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>