<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMarkerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/mainColor4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/addmarker"
            android:textColor="@color/main"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698" />

        <ImageView
            android:id="@+id/close2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addBtn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/shape3"
        android:elevation="40dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/addbtn"
        android:textColor="@color/mainColor4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="74dp"
        android:text="@string/info7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.972" />

    <EditText
        android:id="@+id/addProblem"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:background="@drawable/shape"
        android:elevation="5dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:hint="@string/problem"
        android:inputType="textPersonName|textImeMultiLine"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.452" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:text="@string/up1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:paddingBottom="5dp"
        android:text="@string/up2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addImage"
        app:layout_constraintVertical_bias="0.434">

        <RadioButton
            android:id="@+id/radioOne"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selecter"
            android:button="@android:color/transparent"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/h1"
            android:textColor="@drawable/text_color"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioTwo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selecter"
            android:button="@android:color/transparent"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/h2"
            android:textColor="@drawable/text_color"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioThree"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/radio_selecter"
            android:button="@android:color/transparent"
            android:elevation="5dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/h3"
            android:textColor="@drawable/text_color"
            android:textStyle="bold" />

    </RadioGroup>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/viewImage"
        android:layout_width="150dp"
        android:layout_height="170dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/black"
        android:layout_marginTop="108dp"
        app:layout_constraintBottom_toTopOf="@+id/addProblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/ic_user2" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewImage"
        app:layout_constraintEnd_toEndOf="@+id/viewImage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/viewImage"
        app:layout_constraintTop_toTopOf="@+id/viewImage"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.383" />

</androidx.constraintlayout.widget.ConstraintLayout>