<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.marker.FragmentActiveMarker">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/v1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/activeText"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape"
        android:elevation="5dp"
        android:fontFamily="sans-serif-light"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <TextView
        android:id="@+id/phonep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:paddingBottom="5dp"
        android:text="@string/w2"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activePhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/activePhone"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape"
        android:elevation="5dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/activeName"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape"
        android:elevation="5dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <TextView
        android:id="@+id/namep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"

        android:text="@string/w1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <TextView
        android:id="@+id/problemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/qq"

        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/activeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/del"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="468dp"
        android:background="@drawable/shape3"
        android:elevation="20dp"
        android:fontFamily="sans-serif-condensed"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/mymarkers2"
        android:textColor="@color/mainColor4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:gravity="center"
        android:text="@string/w3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <TextView
        android:id="@+id/checktext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:text="@string/w4"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>